-PIZZ- Fix global page height to stretch to 100%

--- a/_Projects/-PIZZ-/css/styles.css
+++ b/_Projects/-PIZZ-/css/styles.css
@@ -1,9 +1,23 @@
+html {
+  height: 100%;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background: #f3f2f2;
+  min-height: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header,
@@ -316,7 +330,6 @@ main.menu {
   height: auto;
 }
 
-/* Media Queries for smaller screens */
 @media screen and (max-width: 540px) {
   .gallery {
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
@@ -402,6 +415,7 @@ main {
   width: 90%;
   max-width: 1000px;
   margin: 0 auto 0 auto;
+  flex: 1;
 }
 
 .order-category {
